remove unneeded JVM args